--- a/index.html
+++ b/index.html
@@ -100,9 +100,16 @@
         </article>
        </div>
        
+
 <div class="menu-cta center">
- <a class="btn btn-outline2" href="https://wa.me/c/127921943486627">Explore Our Menu</a>
+  <a
+    class="btn btn-outline"
+    href="https://wa.me/c/127921943486627"  <!-- WhatsApp CatalogWhatsApp catalog"
+  >
+    Explore Our Menu
+  </a>
 </div>
+
 
     </div>
   </section>
