--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <div class="menu-cta center">
   <a
-    class="btn btn-outline"
+    class="btn btn-outline2"
     href="https://wa.me/c/127921943486627"  <!-- WhatsApp CatalogWhatsApp catalog"
   >
     Explore Our Menu
